Fix spacing in daily-stats

--- a/src/styles.css
+++ b/src/styles.css
@@ -239,7 +239,7 @@ a {
   font-weight: 400;
   display: flex;
   justify-content: space-between;
-  max-width: 240px;
+  max-width: 265px;
 }
 
 .forecast-extra-icon {
